--- a/Negmiewan-v1.1.0/main.tex
+++ b/Negmiewan-v1.1.0/main.tex
@@ -38,7 +38,7 @@
 
 % Title
 \title{\textcolor{red}{CFD软件使用指北} \\ \small {Nektar++ \& Gmsh etc.入门}}
-\author{\href{https://github.com/Erllane}{\Large{$\mathfrak{Erllane}$}}}
+\author{\href{https://github.com/Elainex0930}{\Large{$\mathfrak{Elaine}$}}}
 \date{\today}
 \newtheorem{example}{}            
 \newtheorem{algo}{算法}
